package examples;

public class Biking implements ExerciseMethod {
    @Override
    public void exercise(Duration exerciseDuration) {

    }
}
