package examples;

public class Duration {
}
