package examples;

public interface ExerciseMethod {
    void exercise(Duration exerciseDuration);
}
