package examples;

public class Rowing implements ExerciseMethod {
}
