package examples;

public class Time {
}
